--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 DB_URL = mongodb+srv://dhumneabhay:ZashFju5WLyCNGmR@cluster0.gwhhl.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0 
 JWT_SECRET=HyywH5lV5hj19fHtAhy6xCg2GtkKy6rx
+SeanderMail = dhumneabhay@gmail.com
+SenderPassKey = teki tvrd sgbk bwdj
